Fix overlap comment submit button

--- a/app/assets/stylesheets/_comments.scss
+++ b/app/assets/stylesheets/_comments.scss
@@ -1,4 +1,6 @@
 .comment-form {
+  overflow: hidden;
+
   textarea {
     width: 100%;
     height: 5.5em;
